# pagure-releng-stats

./: .gitignore  README.md  pyproject.toml
pagure_releng_stats/: main.py
