[tool.poetry]
name = "pagure-releng-stats"
version = "0.1.0"
description = "Fetch and analyze issue statistics from the Pagure Releng repository"
authors = ["Samyak Jain <samyak.jn11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
matplotlib = "^3.10.1"

[tool.poetry.scripts]
fetch-stats = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
